crates/apollo-compiler/test_data/diagnostics/0024_interface_definition_with_duplicate_fields.txt
Error: duplicate definitions for the `name` field of interface type `NamedEntity`
   ╭─[0024_interface_definition_with_duplicate_fields.graphql:7:3]
   │
 6 │   name: String
   │   ──┬─  
   │     ╰─── previous definition of `name` here
 7 │   name: String
   │   ──────┬─────  
   │         ╰─────── `name` redefined here
───╯

